# minimx-tts-latency-test

./: .env.example  .gitignore  README.md  pyproject.toml
app/: azure_openai_latency.py  baseten_latency.py  config.py  main.py  minimax_latency.py  openai_latency.py  openrouter_latency.py  voyage_latency.py
app/prompts/: openai_system_prompt.txt
baml_client/: async_client.py  inlinedbaml.py  parser.py  stream_types.py  sync_client.py  type_builder.py  type_map.py  types.py
baml_src/clients/: providers.baml
baml_src/functions/: generate_queries.baml
baml_src/types/: structs.baml
